# wos-redeem-code-core

./: .dockerignore  .env  .env.prod  .gitignore  Dockerfile  LICENSE  README.md  batch_redeemer.py  create_config.py  cron.py  giftcode_system.db  main.py  pyproject.toml  reddit.ipynb  requirements.txt  supervisord.conf  test.py
.github/workflows/: ci.yml  hourly-cron.yml
app/: error_codes.json  main copy.py  main.py
app/api/: dependencies.py
app/api/routers/: giftcodes.py  health.py  players.py  redemptions.py  tasks.py
app/archive/: database.py  rclone.py  rclone_template.txt  wos_api_old_v2.py
app/core/: config.py  lifespan.py
app/db/: database.py  supabase.py
app/schemas/: giftcodes.py  players.py  redemptions.py  tasks.py
app/services/: batch_redeemer.py  jobs.py  player_api.py
app/tests/: test_imports_and_source.py  test_supabase.py
app/utils/: captcha_solver.py  fetch_gc_async.py  wos_api.py  wos_api_old.py  wos_api_old_v2.py
db/: __init__.py  database.py
utils/: __init__.py  captcha_solver.py  fetch_gc_async.py  fetch_giftcodes.py  rclone copy.py  rclone.py  redemption.py  wos_api.py  wos_api_old_v2.py
