[project]
name = "wos-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpraw>=7.8.1",
    "ddddocr>=1.5.6",
    "fastapi>=0.116.1",
    "pandas>=2.3.1",
    "pexpect>=4.9.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]
